crater-frontend/hack/deploy/ingress/frontend-ingress.yaml
# Copyright 2025 RAIDS Lab
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crater-web-frontend-ingress
  namespace: crater
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - crater.act.buaa.edu.cn
      secretName: crater-tls-secret
  rules:
    - host: crater.act.buaa.edu.cn
      http:
        paths:
          - path: /website
            pathType: Prefix
            backend:
              service:
                name: crater-website-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crater-web-frontend-svc
                port:
                  number: 80
